syle page login

--- a/app/html/adherents/ficheAdherent.html
+++ b/app/html/adherents/ficheAdherent.html
@@ -58,7 +58,7 @@
                         </div>
 
                         <!-- Adresse mail -->
-                        <div class="form-group">
+                        <div class="form-group" ng-class="{'has-error' : ficheAdherentForm.inputEmail.$error.pattern}">
                             <div class="col-sm-12">
                                 <div class="input-group">
                                     <div class="input-group-addon">
