Click ligne media

--- a/app/html/medias/medias.html
+++ b/app/html/medias/medias.html
@@ -28,19 +28,22 @@
 		</div>
 	</form>
 	
-	<table id="mediaTable" datatable="ng" class="display" cellspacing="0" width="100%">
+	<table id="mediaTable" datatable="ng" datatable="ng" dt-options="dtOptions" class="display" cellspacing="0" width="100%">
 		<thead>
 			<tr>
+				<th>ID</th>
                 <th>Titre</th>
                 <th>Auteur</th>
                 <th>Type</th>
                 <th>Emprunteur</th>
                 <th>Date d'emprunt</th>
+                
             </tr>
         </thead>
         <tfoot>
 
            <tr>
+           		<th>ID</th>
                 <th>Titre</th>
                 <th>Auteur</th>
                 <th>Type</th>
@@ -51,6 +54,7 @@
         <tbody>
             
             <tr ng-repeat="item in list">
+   				<td ng-bind="item.id"></td>         
 				<td ng-bind="item.titre"></td>
 				<td ng-bind="item.auteur"></td>
 				<td ng-bind="item.type"></td>
