--- a/app/index.html
+++ b/app/index.html
@@ -57,10 +57,16 @@
         <script src="js/adherents/adherentsService.js"></script>
         <script src="js/adherents/ficheAdherentService.js"></script>
         <script src="js/medias/mediasModule.js"></script>
+        <script src="js/medias/mediasService.js"></script>
         <script src="js/medias/MediasController.js"></script>
         <script src="js/login/loginModule.js"></script>
         <script src="js/login/loginService.js"></script>
         <script src="js/login/LoginController.js"></script>
+
+        <script src="js/medias/ficheMediaService.js"></script>
+        <script src="js/medias/FicheMediasController.js"></script>
+
+        
     </head>
     <body ng-controller="LoginController">
         <nav class="navbar navbar-default" ng-show="connect()" >
