beautify + css table media

--- a/app/html/adherents/ficheAdherent.html
+++ b/app/html/adherents/ficheAdherent.html
@@ -2,7 +2,9 @@
     <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-            <h1><i class="mdi mdi-account-card-details"></i> Fiche Adhérent</h1>
+            <h1>
+                <i class="mdi mdi-account-card-details"></i>
+                Fiche Adhérent</h1>
 
             <br>
             <!-- BEGIN DOWNLOAD PANEL -->
@@ -41,8 +43,8 @@
                                     </div>
 
                                     <datepicker date-format="dd/MM/yyyy">
-                                    <input type="text" class="form-control" id="dateNaissance" ng-model="adherent.date_naissance" placeholder="Date de naissance" name="dateNaissance" required>
-                                </div>
+                                        <input type="text" class="form-control" id="dateNaissance" ng-model="adherent.date_naissance" placeholder="Date de naissance" name="dateNaissance" required>
+                                    </div>
                                 </datepicker>
                                 <p ng-show="ficheAdherentForm.dateNaissance.$invalid && ficheAdherentForm.dateNaissance.$untouched" class="help-block">Champ obligatoire</p>
                             </div>
@@ -75,7 +77,7 @@
                                         required>
                                 </div>
                                 <p ng-show="ficheAdherentForm.inputEmail.$error.pattern" class="help-block">Email non valide</p>
-                                 <p ng-show="ficheAdherentForm.inputEmail.$error.required" class="help-block">Email requis</p>
+                                <p ng-show="ficheAdherentForm.inputEmail.$error.required" class="help-block">Email requis</p>
                             </div>
                         </div>
 
@@ -120,8 +122,8 @@
                                     </div>
 
                                     <datepicker date-format="dd/MM/yyyy">
-                                    <input type="text" class="form-control" id="datePaiementCotisation" ng-model="adherent.cotisation.debut" placeholder="Date paiement cotisation" name="datePaiementCotisation">
-                                </datepicker>
+                                        <input type="text" class="form-control" id="datePaiementCotisation" ng-model="adherent.cotisation.debut" placeholder="Date paiement cotisation" name="datePaiementCotisation">
+                                    </datepicker>
                                 </div>
                             </div>
 
@@ -131,7 +133,7 @@
                                         <i class="mdi mdi-calendar"></i>
                                     </div>
                                     <datepicker date-format="dd/MM/yyyy">
-                                    <input type="text" class="form-control" id="dateFinAbonnement" placeholder="Date fin abonnement" name="dateFinAbonnement" ng-model="adherent.cotisation.fin" ng-bind="finCotisation()">
+                                        <input type="text" class="form-control" id="dateFinAbonnement" placeholder="Date fin abonnement" name="dateFinAbonnement" ng-model="adherent.cotisation.fin" ng-bind="finCotisation()">
                                     </datepicker>
                                 </div>
                             </div>
@@ -152,7 +154,7 @@
                             </div>
                         </div>
                         <input type="hidden" value="">
-                      </form>
+                    </form>
                 </div>
                 <!-- end panel-body -->
             </div>
